--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     },
     "devDependencies": {
         "@types/bun": "*",
-        "@wxn0brp/db-core": "^0.4.0",
-        "@wxn0brp/db-storage-dir": "^0.1.6",
+        "@wxn0brp/db-core": "~0.5.0",
+        "@wxn0brp/db-storage-dir": "~0.2.0",
         "tsc-alias": "*",
         "typescript": "*"
     },
     "peerDependencies": {
-        "@wxn0brp/db-core": ">=0.4.0",
-        "@wxn0brp/db-storage-dir": ">=0.1.6"
+        "@wxn0brp/db-core": "~0.5.0",
+        "@wxn0brp/db-storage-dir": "~0.2.0"
     },
     "files": [
         "dist"
